# MiniDebet

./: .deployed_migrations  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  SUPPORT.md  tsconfig.json  wrangler.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_question.md
.github/workflows/: deploy-backend.yml
backend/: Cargo.toml
backend/migrations/: 0001_create_users.sql  0002_create_clients.sql  0003_create_invoices.sql  0004_create_invoice_items.sql  0005_create_user_settings.sql
backend/src/: main.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  client.rs  invoice.rs  mod.rs  user.rs
backend/src/models/: client.rs  invoice.rs  mod.rs  settings.rs  user.rs
backend/tests/: integration_test.rs
backend/worker/: Cargo.toml  lib.rs  mod.rs
backend/worker/src/: auth.rs  db.rs  handlers.rs  lib.rs
docs/: README.md
docs/api/: api-reference.md
docs/architecture/: api-design.md  system-architecture.md
docs/database/: database-design.md
docs/deployment/: cloudflare-deployment.md
docs/development/: setup-guide.md
docs/testing/: testing-strategy.md
frontend/: index.html  package.json  tailwind.config.js  test-build.sh  tsconfig.json  vite.config.ts
frontend/__tests__/: App.test.tsx
frontend/src/: App.tsx
scripts/: deploy-migrations.py  deploy-worker.bat  deploy-worker.sh
shared/: package.json
shared/src/: index.ts
(+7 files in other folders)
